--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PortfolioAce.Views.AboutView"
+﻿<UserControl x:Class="PortfolioAce.Views.AllFundsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="About" />
+        <TextBlock Text="All Funds" />
     </Grid>
 </UserControl>
