--- a/PortfolioAce/Views/Windows/AddFundWindow.xaml
+++ b/PortfolioAce/Views/Windows/AddFundWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Windows"
         mc:Ignorable="d"
-        Title="AddFundWindow" Height="450" Width="800">
+        Title="Create a New Fund" Height="240" Width="320">
     <Grid>
         
     </Grid>
