--- a/PortfolioAce/MainWindow.xaml
+++ b/PortfolioAce/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:views="clr-namespace:PortfolioAce.Views"
         xmlns:viewmodels="clr-namespace:PortfolioAce.ViewModels"
         mc:Ignorable="d"
-        Title="PortfolioAce" Height="450" Width="800">
+        Title="PortfolioAce" Height="450" Width="800" Icon="/PortfolioAce;component/Resources\portfolioace_logo_icon.ico">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewmodels:HomeViewModel}">
             <views:HomeView/>
