--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -16,10 +16,21 @@
             <RowDefinition Height="117*"/>
             <RowDefinition Height="247*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="1" Text="Fund Static Details, Latest Performance" />
+        <DockPanel Grid.Column="1" Grid.Row="0" Margin="2">
+            <StackPanel DockPanel.Dock="Left">
+                <TextBlock><Bold>Fund Name:</Bold> Test Fund 1</TextBlock>
+                <TextBlock><Bold>NAV as of 04/01/2021:</Bold> 50,000,000 GBP</TextBlock>
+                <TextBlock><Bold>NAV per share as of 04/01/2021:</Bold> 105.97</TextBlock>
+                <TextBlock><Bold>ITD Performance:</Bold> 10.7314%</TextBlock>
+            </StackPanel>
+            <StackPanel DockPanel.Dock="Left" Margin="30,0,0,0">
+                <Button Margin="20,10,0,0" Width="210">View NAV Breakdown</Button>
+                <Button Margin="20,10,0,0" Width="210">View Subscriptions and Redemptions</Button>
+            </StackPanel>
+        </DockPanel>
         <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"/>
         <DockPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="2">
-            <TextBlock DockPanel.Dock="Top" Text="Fund Positions" />
+            <TextBlock DockPanel.Dock="Top" Margin="0,0,0,5"><Bold>Current Positions for Test Fund 1</Bold></TextBlock>
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
                 <Button Margin="1,0,3,0">Add Trade</Button>
                 <Button Margin="0,0,3,0">Add Cash Trade</Button>
