--- a/PortfolioAce/Views/HomeView.xaml
+++ b/PortfolioAce/Views/HomeView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Home" />
+        <Image Source="/PortfolioAce;component/Resources\portfolioace_logo2_hd.png"/>
     </Grid>
 </UserControl>
